fix the extra services reappearing on responsive

--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -185,7 +185,7 @@
             .interface,
             .campaign,
             {
-                display: none;
+                display: none !important;
             }
         }
     }
