--- a/sites/all/themes/cci/sass/_responsive-540.scss
+++ b/sites/all/themes/cci/sass/_responsive-540.scss
@@ -15,6 +15,10 @@
     max-width: 200px;
     margin: 10px auto;
 }
+.front .home-what-we-do
+{
+    background-size: auto;
+}
 
 .block.contact-info .content .gmap
 {
