--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -578,52 +578,49 @@ body.start-a-project
     .content
     {
         text-align: center;
+        color: white;
+    }
+    .email
+    {
+        font-size: 1.25em;
+        padding: 20px 0;
         
-        .address,
-        .email,
-        .phone
+        a
         {
-            display: inline-block;
-            padding: 0 30px 0 42px;
-            font-weight: bold;
-            line-height: 66px;
-            font-size: 1.2em;
             color: white;
-            background-repeat: no-repeat;
-            background-position: left center;
-            
-            a
-            {
-                color: white;
-                text-decoration: none;
-            }
         }
-        .address
-        {
-            background-image: url(../images/icon-address.svg);
-        }
-        .email
-        {
-            background-image: url(../images/icon-email.svg);
-        }
-        .phone
-        {
-            background-image: url(../images/icon-phone.svg);
-        }
+    }
+    .location
+    {
+        display: inline-block;
+        width: 360px;
+        max-width: 100%;
+        padding: 20px 0;
+        line-height: 1;
         
-        .gmap
+        h3
         {
-            height: 365px;
-            width: 100%;
-            color: $green;
-            text-align: left;
-            
-            h2
-            {
-                color: white;
-                margin-bottom: 0;
-                text-align: center;
-            }
+            font-size: 1.75em;
+            margin-bottom: 0.5em;
+        }
+        p
+        {
+            margin-bottom: 0.5em;
+            font-size: 1.25em;
+        }
+    }
+    .gmap
+    {
+        height: 365px;
+        width: 100%;
+        color: $green;
+        text-align: left;
+        
+        h2
+        {
+            color: white;
+            margin-bottom: 0;
+            text-align: center;
         }
     }
 }
