--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -608,6 +608,10 @@ body.start-a-project
             margin-bottom: 0.5em;
             font-size: 1.25em;
         }
+        a
+        {
+            text-decoration: none;
+        }
     }
     .gmap
     {
