--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -585,17 +585,18 @@ body.start-a-project
             color: white;
         }
     }
-    .email
+    h2
     {
-        font-size: 1.25em;
-        padding: 20px 0;
+        line-height: 88px;
+        text-transform: uppercase;
+        font-size: 2.4em;
     }
     .location
     {
         display: inline-block;
         width: 360px;
         max-width: 100%;
-        padding: 20px 0;
+        padding: 0 0 20px 0;
         line-height: 1;
         
         h3
@@ -607,10 +608,6 @@ body.start-a-project
         {
             margin-bottom: 0.5em;
             font-size: 1.25em;
-        }
-        a
-        {
-            text-decoration: none;
         }
     }
     .gmap
