header image for toronto page with new alias

--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -417,7 +417,8 @@ body.services #page-title
 {
     background-image:url(../images/title-services.jpg);
 }
-body.cci-studios-opens-toronto-office #page-title
+body.cci-studios-opens-toronto-office #page-title,
+body.toronto #page-title
 {
     background-image:url(../images/bg-home.jpg);
 }
