--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -621,3 +621,8 @@
         background-image: url(../images/icon-services-event-green.svg);
     }
 }
+
+.view-careers .views-row
+{
+    margin: 0.5em 0;
+}
