--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -8,7 +8,7 @@
     .block.home-header
     {
         height: 800px;
-        background: url(../images/bg-home2.jpg?) no-repeat center center;
+        background: url(../images/bg-home.jpg?) no-repeat center center;
         background-size: cover;
         position: relative;
         
